resume1/force-app/main/default/objects/Resume_Education__c/Resume_Education__c.object-meta.xml
<CustomObject>
    <label>Resume Education</label>
    <nameField>
        <label>Resume Education Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Resume Educations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>