resume1/force-app/main/default/objects/Resume_Education__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <label>Duration</label>
    <length>254</length>
    <type>Text</type>
</CustomField>