resume1/force-app/main/default/objects/Resume_Education__c/fields/Grade__c.field-meta.xml
<CustomField>
    <fullName>Grade__c</fullName>
    <label>Grade</label>
    <length>254</length>
    <type>Text</type>
</CustomField>