resume1/force-app/main/default/objects/Resume_Education__c/fields/Institution__c.field-meta.xml
<CustomField>
    <fullName>Institution__c</fullName>
    <label>Institution</label>
    <length>254</length>
    <type>Text</type>
</CustomField>