resume1/force-app/main/default/objects/Resume_Education__c/fields/Resume__c.field-meta.xml
<CustomField>
    <fullName>Resume__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resume</label>
    <referenceTo>Resume__c</referenceTo>
    <relationshipLabel>Resume Educations</relationshipLabel>
    <relationshipName>Resume_Educations</relationshipName>
    <type>Lookup</type>
</CustomField>